# SpinStep

./: .gitignore  ASSESSMENT.md  AUDIT.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  REFACTOR_INSTRUCTIONS.md  RELEASE_READINESS.md  STATUS.md  dev-requirements.txt  pyproject.toml  repository-refactor-master.instructions.mdTIONS.md  requirements.txt  setup.cfg  setup.py  traversal.py
.github/: workflows_disabled
.github/instructions/: copilot-instructions.md  stage-0.contraints.instructions.md  stage-2.instructions.md  stage-3.instructions.md  stage-4.instructions.md  stage-5.instructions.md  stage-6.instructions.md  stage-7.instructions.md  stage1.instructions.md
.github/workflows/: ci.yml  publish.yml
benchmark/: INSTRUCTIONS.md  README.md  edge-cases.md  liminal_cases.md  references.md
demos/: demo3_spatial_traversal.py
docs/: 01-rationale.md  01_rationale.md  02-architecture.md  02_challenges.md  03-basics.md  03_basics.md  04-use-cases.md  04-use_cases.md  04_use_cases.md  05-visualization.md  05_visualization.md  06-discrete-traversal.md  06_annex_security.md  06_discrete_rotational_logic.md  06_discrete_traversal.md  07-cuda-support.md  07_annex_qgnn.md  07_cuda_support.md  08-troubleshooting.md  08_troubleshooting.md  09-api-reference.md  09_API_Reference.md  CONTRIBUTING.md  CONTRIBUTING_Version4.md  annex-challenges.md  annex-discrete-rotational-logic.md  annex-qgnn.md  annex-security.md  annex_  annex_discrete_rotational_logic.md  annex_qgnn.md  annex_security.md  challenges.md  continuous-traversal.md  discrete-traversal.md  docs_02_architecture_Version2.md  docs_07_troubleshooting_Version2.md  docs_api_Version2.md  faq.md  getting-started.md  (+4 more)
examples/: docs_08_cuda_support_Version2.md  gpu_orientation_matching.py  qgnn_example.py  test_qgnn_benchmark.py
spinstep/: __init.py__  __init__.py  demo-full-depth-traversal.py  demo.py  demo1_tree_traversal.py  demo2_full_depth_traversal.py  demo3_spatial_traversal.py  demo4_discrete_traversal.py  discrete.py  discrete_iterator.py  graph.py  new_node.py  node.py  orientations.py  quaternion_utils.py  serialization.py  spinstep_node_Version2.py  spinstep_traversal.py  traversal.py
spinstep/control/: __init__.py  agent.py  agent_manager.py  controllers.py  events.py  frames.py  state.py  trajectory.py
spinstep/demos/: demo.py
spinstep/math/: __init__.py  analysis.py  constraints.py  conversions.py  core.py  geometry.py  interpolation.py
spinstep/traversal/: __init__.py  continuous.py  discrete.py  discrete_iterator.py  graph_iterators.py  node.py  scene_graph.py  spatial_node.py
spinstep/utils/: __init__.py  array_backend.py  new_quaternion_utils.py  quaternion_math.py  quaternion_utils.py
tests/: test.py  test_agent.py  test_api.py  test_control.py  test_discrete_traversal.py  test_discrete_traversal_Version2.py  test_events.py  test_frames.py  test_math.py  test_orientations.py  test_qgnn_benchmark.py  test_scene_graph.py  test_serialization.py  test_spatial_node.py  test_spinstep.py  test_traversal.py  test_utils.py
