[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spinstep"
version = "0.3.1a1"
description = "Quaternion-based tree traversal for orientation-aware structures."
authors = [{ name = "Eraldo Marques", email = "eraldo.bernardo@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.10",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
gpu = [
    "cupy-cuda12x",
]
healpy = [
    "healpy",
]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
]

[project.urls]
Repository = "https://github.com/VoxleOne/SpinStep"

[tool.setuptools.packages.find]
include = ["spinstep*"]
exclude = ["benchmark*", "demos*", "examples*", "tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.mypy]
strict = true

[tool.ruff]
line-length = 88
