[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spinstep"
version = "0.6.0a0"
description = "Quaternion-based orientation control and traversal in observer-centered spherical coordinates."
authors = [{ name = "Eraldo Marques", email = "eraldo.bernardo@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.10",
]

[project.optional-dependencies]
gpu = [
    "cupy-cuda12x",
]
healpy = [
    "healpy",
]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]

[project.urls]
Repository = "https://github.com/VoxleOne/SpinStep"
Changelog = "https://github.com/VoxleOne/SpinStep/blob/main/CHANGELOG.md"
Documentation = "https://github.com/VoxleOne/SpinStep/tree/main/docs"

[tool.setuptools.packages.find]
include = ["spinstep*"]
exclude = ["benchmark*", "demos*", "examples*", "tests*", "docs*"]

[tool.setuptools.package-data]
spinstep = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "sklearn.*",
    "healpy.*",
    "cupy.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
